update password with doc and test
