# routes/api/auth.php
@@ -13,4 +13,5 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::post('/logout', LogoutController::class)->name('api.logout');
     Route::get('/user', GetProfileController::class)->name('api.user');
     Route::patch('/profile', \App\Http\Api\Controllers\UpdateProfileController::class)->name('api.profile.update');
+    Route::patch('/password', \App\Http\Api\Controllers\Auth\UpdatePasswordController::class)->name('api.password.update');
 });
